// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests TextField Affix 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: auto 1fr auto;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c4 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c4::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c4::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c4:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c4::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        /home/john/
      </div>
      <input
        aria-labelledby="test-id"
        className="c4"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
      <span
        className="c5"
      >
        .png
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField AssistiveText 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

.c4 {
  font-size: 14px;
  line-height: 22px;
  margin-top: 4px;
  margin-bottom: -4px;
  color: var(--charcoal-text2);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
    <p
      className="c4"
    >
      説明が入ります
    </p>
  </div>
</div>
`;

exports[`Storybook Tests TextField Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span>
          <button
            className="charcoal-clickable"
          >
            Text Link
          </button>
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        placeholder="TextField"
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField Disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 0.32;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      aria-disabled={true}
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={true}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField Invalid 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(255,43,0,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

.c4 {
  font-size: 14px;
  line-height: 22px;
  margin-top: 4px;
  margin-bottom: -4px;
  color: var(--charcoal-assertive);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-invalid={true}
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
    <p
      className="c4"
    >
      エラーメッセージ
    </p>
  </div>
</div>
`;

exports[`Storybook Tests TextField Label 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField Number 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
      />
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        onWheel={[Function]}
        readOnly={false}
        required={false}
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField Placeholder 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        placeholder="Placeholder"
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField Prefix 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: auto 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c5::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c5::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c5:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c5::placeholder {
  color: var(--charcoal-text3);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #858585;
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <pixiv-icon
            name="16/Search"
          />
        </div>
      </div>
      <input
        aria-labelledby="test-id"
        className="c5"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField ReadOnly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={true}
        required={false}
        type="text"
        value="読み取り専用"
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField RequiredText 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-required-text"
      >
        *必須
      </div>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        aria-required={true}
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField ShowCount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr auto;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

.c5 {
  line-height: 22px;
  font-size: 14px;
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span />
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        maxLength={100}
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
      <span
        className="c4"
      >
        <span
          className="c5"
        >
          0/100
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests TextField SubLabel 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c2:not(:disabled):not([aria-disabled]):hover,
.c2 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c3::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c3:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c3::placeholder {
  color: var(--charcoal-text3);
}

<div
  data-dark={false}
>
  <div
    className="c0"
  >
    <div
      className="charcoal-field-label-root c1"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "clipPath": "inset(50%)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      <label
        className="charcoal-field-label"
        htmlFor="test-id"
        id="test-id"
      >
        Label
      </label>
      <div
        className="charcoal-field-label-sub-label"
      >
        <span>
          <button
            className="charcoal-clickable"
          >
            Text Link
          </button>
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <input
        aria-labelledby="test-id"
        className="c3"
        disabled={false}
        id="test-id"
        onChange={[Function]}
        readOnly={false}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
